// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Integration test FleetProvision 1`] = `
Object {
  "Parameters": Object {
    "AssetParameters60bb19ecaa7f835c90bcc9ef450659b32f8fbb0dee2805b5ccc625d742576270ArtifactHashBF604256": Object {
      "Description": "Artifact hash for asset \\"60bb19ecaa7f835c90bcc9ef450659b32f8fbb0dee2805b5ccc625d742576270\\"",
      "Type": "String",
    },
    "AssetParameters60bb19ecaa7f835c90bcc9ef450659b32f8fbb0dee2805b5ccc625d742576270S3BucketF2D72C63": Object {
      "Description": "S3 bucket for asset \\"60bb19ecaa7f835c90bcc9ef450659b32f8fbb0dee2805b5ccc625d742576270\\"",
      "Type": "String",
    },
    "AssetParameters60bb19ecaa7f835c90bcc9ef450659b32f8fbb0dee2805b5ccc625d742576270S3VersionKeyCFA66CB9": Object {
      "Description": "S3 key for asset version \\"60bb19ecaa7f835c90bcc9ef450659b32f8fbb0dee2805b5ccc625d742576270\\"",
      "Type": "String",
    },
  },
  "Resources": Object {
    "testcaseFleetGeneratortestcase12A380D3": Object {
      "DependsOn": Array [
        "testcaseFleetGeneratortestcaseServiceRoleDefaultPolicy66DAC61D",
        "testcaseFleetGeneratortestcaseServiceRoleF1235FE0",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParameters60bb19ecaa7f835c90bcc9ef450659b32f8fbb0dee2805b5ccc625d742576270S3BucketF2D72C63",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters60bb19ecaa7f835c90bcc9ef450659b32f8fbb0dee2805b5ccc625d742576270S3VersionKeyCFA66CB9",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters60bb19ecaa7f835c90bcc9ef450659b32f8fbb0dee2805b5ccc625d742576270S3VersionKeyCFA66CB9",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Environment": Object {
          "Variables": Object {
            "AWS_NODEJS_CONNECTION_REUSE_ENABLED": "1",
            "BUCKET_NAME": Object {
              "Fn::ImportValue": "another-stack:ExportsOutputRefuserProvidedBucket2349EF2D343936C6",
            },
            "BUCKET_PREFIX": "test",
            "FLEET_PROVISIONING_ROLE_ARN": Object {
              "Fn::GetAtt": Array [
                "testcaseProvisionRoleFleetProvisioningRoletestcase678B85F8",
                "Arn",
              ],
            },
            "GREENGRASS_V2_TOKEN_EXCHANGE_ROLE_ARN": "",
          },
        },
        "Handler": "index.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "testcaseFleetGeneratortestcaseServiceRoleF1235FE0",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "testcaseFleetGeneratortestcase5505B899": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "iam:PassRole",
                "iot:CreateProvisioningTemplate",
                "iot:CreatePolicy",
                "iot:CreateKeysAndCertificate",
                "iot:AttachPolicy",
                "iot:CreateRoleAlias",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "testcaseFleetGeneratortestcase5505B899",
        "Roles": Array [
          Object {
            "Ref": "testcaseFleetGeneratortestcaseServiceRoleF1235FE0",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "testcaseFleetGeneratortestcaseServiceRoleDefaultPolicy66DAC61D": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
                "s3:DeleteObject*",
                "s3:PutObject*",
                "s3:Abort*",
              ],
              "Effect": "Allow",
              "Resource": Array [
                Object {
                  "Fn::ImportValue": "another-stack:ExportsOutputFnGetAttuserProvidedBucket2349EF2DArnA89CCA27",
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::ImportValue": "another-stack:ExportsOutputFnGetAttuserProvidedBucket2349EF2DArnA89CCA27",
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "testcaseFleetGeneratortestcaseServiceRoleDefaultPolicy66DAC61D",
        "Roles": Array [
          Object {
            "Ref": "testcaseFleetGeneratortestcaseServiceRoleF1235FE0",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "testcaseFleetGeneratortestcaseServiceRoleF1235FE0": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "testcaseProvisionRoleFleetProvisioningRoletestcase678B85F8": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "iot.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSIoTThingsRegistration",
              ],
            ],
          },
        ],
        "RoleName": "ProvisionRoleName-FleetProvisioningRole-test-case",
      },
      "Type": "AWS::IAM::Role",
    },
  },
}
`;

exports[`Integration test FleetProvision in Greengrass V2 mode 1`] = `
Object {
  "Parameters": Object {
    "AssetParameters60bb19ecaa7f835c90bcc9ef450659b32f8fbb0dee2805b5ccc625d742576270ArtifactHashBF604256": Object {
      "Description": "Artifact hash for asset \\"60bb19ecaa7f835c90bcc9ef450659b32f8fbb0dee2805b5ccc625d742576270\\"",
      "Type": "String",
    },
    "AssetParameters60bb19ecaa7f835c90bcc9ef450659b32f8fbb0dee2805b5ccc625d742576270S3BucketF2D72C63": Object {
      "Description": "S3 bucket for asset \\"60bb19ecaa7f835c90bcc9ef450659b32f8fbb0dee2805b5ccc625d742576270\\"",
      "Type": "String",
    },
    "AssetParameters60bb19ecaa7f835c90bcc9ef450659b32f8fbb0dee2805b5ccc625d742576270S3VersionKeyCFA66CB9": Object {
      "Description": "S3 key for asset version \\"60bb19ecaa7f835c90bcc9ef450659b32f8fbb0dee2805b5ccc625d742576270\\"",
      "Type": "String",
    },
  },
  "Resources": Object {
    "testcaseFleetGeneratortestcase12A380D3": Object {
      "DependsOn": Array [
        "testcaseFleetGeneratortestcaseServiceRoleDefaultPolicy66DAC61D",
        "testcaseFleetGeneratortestcaseServiceRoleF1235FE0",
      ],
      "Properties": Object {
        "Code": Object {
          "S3Bucket": Object {
            "Ref": "AssetParameters60bb19ecaa7f835c90bcc9ef450659b32f8fbb0dee2805b5ccc625d742576270S3BucketF2D72C63",
          },
          "S3Key": Object {
            "Fn::Join": Array [
              "",
              Array [
                Object {
                  "Fn::Select": Array [
                    0,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters60bb19ecaa7f835c90bcc9ef450659b32f8fbb0dee2805b5ccc625d742576270S3VersionKeyCFA66CB9",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "Fn::Select": Array [
                    1,
                    Object {
                      "Fn::Split": Array [
                        "||",
                        Object {
                          "Ref": "AssetParameters60bb19ecaa7f835c90bcc9ef450659b32f8fbb0dee2805b5ccc625d742576270S3VersionKeyCFA66CB9",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Environment": Object {
          "Variables": Object {
            "AWS_NODEJS_CONNECTION_REUSE_ENABLED": "1",
            "BUCKET_NAME": Object {
              "Fn::ImportValue": "another-stack:ExportsOutputRefuserProvidedBucket2349EF2D343936C6",
            },
            "BUCKET_PREFIX": "test",
            "FLEET_PROVISIONING_ROLE_ARN": Object {
              "Fn::GetAtt": Array [
                "testcaseProvisionRoleFleetProvisioningRoletestcase678B85F8",
                "Arn",
              ],
            },
            "GREENGRASS_V2_TOKEN_EXCHANGE_ROLE_ARN": Object {
              "Fn::GetAtt": Array [
                "testcaseGreenGrassTokenExchangeRoletestcaseB8BB7F57",
                "Arn",
              ],
            },
          },
        },
        "Handler": "index.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "testcaseFleetGeneratortestcaseServiceRoleF1235FE0",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "testcaseFleetGeneratortestcase5505B899": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "iam:PassRole",
                "iot:CreateProvisioningTemplate",
                "iot:CreatePolicy",
                "iot:CreateKeysAndCertificate",
                "iot:AttachPolicy",
                "iot:CreateRoleAlias",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "testcaseFleetGeneratortestcase5505B899",
        "Roles": Array [
          Object {
            "Ref": "testcaseFleetGeneratortestcaseServiceRoleF1235FE0",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "testcaseFleetGeneratortestcaseServiceRoleDefaultPolicy66DAC61D": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
                "s3:DeleteObject*",
                "s3:PutObject*",
                "s3:Abort*",
              ],
              "Effect": "Allow",
              "Resource": Array [
                Object {
                  "Fn::ImportValue": "another-stack:ExportsOutputFnGetAttuserProvidedBucket2349EF2DArnA89CCA27",
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      Object {
                        "Fn::ImportValue": "another-stack:ExportsOutputFnGetAttuserProvidedBucket2349EF2DArnA89CCA27",
                      },
                      "/*",
                    ],
                  ],
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "testcaseFleetGeneratortestcaseServiceRoleDefaultPolicy66DAC61D",
        "Roles": Array [
          Object {
            "Ref": "testcaseFleetGeneratortestcaseServiceRoleF1235FE0",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "testcaseFleetGeneratortestcaseServiceRoleF1235FE0": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "testcaseGreenGrassTokenExchangeRoletestcaseB8BB7F57": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "credentials.iot.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Policies": Array [
          Object {
            "PolicyDocument": Object {
              "Statement": Array [
                Object {
                  "Action": Array [
                    "iot:DescribeCertificate",
                    "logs:CreateLogGroup",
                    "logs:CreateLogStream",
                    "logs:PutLogEvents",
                    "logs:DescribeLogStreams",
                    "iot:Connect",
                    "iot:Publish",
                    "iot:Subscribe",
                    "iot:Receive",
                    "s3:GetBucketLocation",
                    "s3:GetObject",
                  ],
                  "Effect": "Allow",
                  "Resource": "*",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "tokenExchangePolicy",
          },
        ],
        "RoleName": "GreenGrassTokenExchangeRoleName-test-case",
      },
      "Type": "AWS::IAM::Role",
    },
    "testcaseProvisionRoleFleetProvisioningRoletestcase678B85F8": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "iot.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSIoTThingsRegistration",
              ],
            ],
          },
        ],
        "RoleName": "ProvisionRoleName-FleetProvisioningRole-test-case",
      },
      "Type": "AWS::IAM::Role",
    },
  },
}
`;
